[project]
name = "lab06-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "madison-abshire",email = "mha6@uw.edu"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=2.0.0,<3.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
